--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Generate Scrypta vanity addresses with NodeJS",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon ."
   },
   "repository": {
     "type": "git",
@@ -17,7 +17,11 @@
   },
   "homepage": "https://github.com/scryptachain/scrypta-vanity-address#readme",
   "dependencies": {
+    "cli-spinner": "^0.2.10",
     "coinkey": "^3.0.0",
     "minimist": "^1.2.0"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.3"
   }
 }
